Tidying up documentation and the generator for 1.4 (and removing one redundant line from the 1.4 schema)

--- a/documentation/IPTC-NinJS-Guidelines.adoc
+++ b/documentation/IPTC-NinJS-Guidelines.adoc
@@ -98,7 +98,6 @@ image:ninjsScope-w800.jpg[ninjs Data Model diagram]
 image:ninjsillustration.jpg[ninjs Object Building Blocks diagram]
 
 === A simple example
-
 ninjs can be very simple. This is an example of something that might be returned
 by an API call.
 
@@ -109,6 +108,48 @@ include::includes/examples/001_simple_example.json[]
 
 You can make your own simple ninjs document using the
 https://www.iptc.org/std/ninjs/generator/[ninjs generator tool on iptc.org].
+
+=== Two versions of ninjs: ninjs 1.4 and ninjs 2.0
+
+IPTC manages two current versions of ninjs: 1.4 and 2.0.
+
+The 1.x series adds new features to the version of ninjs that started
+with ninjs 1.0 back in 2013, in a way that is fully backwards
+compatible. The latest release in this series is 1.4, which includes
+new fields _contentcreated_, _expires_ and _rightsinfo_. The 1.4
+version of ninjs was approved by the IPTC Standards Committee on May
+18th, 2022. All new users are strongly recommended to use version 2.0.
+This document describes only the 2.0 version, but those who must use
+version 1.4 for backwards compatibility reasons can find the JSON
+Schema file for ninjs 1.4 schema at
+https://iptc.org/std/ninjs/ninjs-schema_1.4.json.
+
+The 2.x series fixes some issues that made the 1.x series tricky for
+developers to work with. The main change is that we avoid the use of
+patternProperties, so all properties now have well-defined names. This
+work is intended to make ninjs easier for work with binary protocols
+such as Protocol Buffers and Avro. We also took the opportunity to make
+property names more consistent with NewsML-G2 and to add some fields to
+handle rights.
+
+We wanted to issue a new release which fixed these problems, but this
+meant breaking backwards-compatibility with the 1.x versions of ninjs.
+This is why we increased the major version number to 2.0.
+
+The 2.0 version of ninjs was approved by the IPTC Standards Committee on
+October 20th, 2021.
+
+An errata update was made in May 2022 to fix a problem with the way GeoJSON
+properties were integrated into the "places" object.
+
+=== Which version of ninjs should I choose for my project?
+
+If you are starting a green-field project, we recommend using ninjs 2.0.
+This version should be easiest for developers to work with.
+
+If you are already using a 1.x version of ninjs, we recommend at least
+upgrading to version 1.4. This should be an easy change, because 1.4 is
+backwards-compatible with versions 1.0, 1.1, 1.2 and 1.3.
 
 === ninjs and other standards
 
